exports[`AfterControl After editor with label hidden matches spapshots 1`] = `
Array [
  <label
    className="sr-only screen-reader-text"
    htmlFor="caldera-after-entryValue-edit-54fds">
    Text After Value
</label>,
  <input
    id="caldera-after-entryValue-edit-54fds"
    onChange={[Function]}
    placeholder="Text to show after value"
    type="text"
    value="After" />,
]
`;

exports[`AfterControl After editor with label visible matches spapshots 1`] = `
<div
  className="components-base-control caldera-after-entryValue-edit">
  <div
    className="components-base-control__field">
    <label
      className="components-base-control__label"
      htmlFor="inspector-text-control-0">
      Text After Value
    </label>
    <input
      aria-describedby={undefined}
      className="components-text-control__input"
      id="caldera-after-entryValue-edit-54fds"
      onChange={[Function]}
      type="text"
      value="After" />
  </div>
</div>
`;

exports[`Before editor Before editor with label hidden matches spapshots 1`] = `
Array [
  <label
    className="sr-only screen-reader-text"
    htmlFor="caldera-before-entryValue-edit-54fds">
    Text Before Value
</label>,
  <input
    onChange={[Function]}
    placeholder="Text to show before value"
    type="text"
    value="Before" />,
]
`;

exports[`Before editor Before editor with label visible matches spapshots 1`] = `
Array [
  <label
    className="sr-only screen-reader-text"
    htmlFor="caldera-before-entryValue-edit-54fds">
    Text Before Value
</label>,
  <input
    onChange={[Function]}
    placeholder="Text to show before value"
    type="text"
    value="Before" />,
]
`;

exports[`Controls component Match snapshot with all props set 1`] = `
Array [
  <div>
    <label
        className=""
        htmlFor="caldera-forms-form-chooser-54fds">
        Choose Form
    </label>
    <select
        className="caldera-forms-form-chooser"
        id="caldera-forms-form-chooser-54fds"
        onChange={[Function]}
        value="CF5bde22b646ed0">
        <option>
             -- 
        </option>
        <option
            value="CF5bde22a843265">
            Not Contact Form
        </option>
        <option
            value="CF5bde22b646ed0">
            Contact Form
        </option>
    </select>
</div>,
  <label
    htmlFor="caldera-forms-entry-chooser-54fds">
    Choose Entry
</label>,
  <select
    className="caldera-forms-entry-chooser"
    id="caldera-forms-entry-chooser-54fds"
    onChange={[Function]}
    value="1">
    <option
        value={null}>
        --
    </option>
    <option
        value="1">
        1
    </option>
    <option
        value="2">
        2
    </option>
</select>,
  <label
    className=""
    htmlFor="caldera-forms-entry-field-chooser-54fds">
    Choose Field
</label>,
  <select
    className="caldera-forms-entry-field-chooser"
    id="caldera-forms-entry-field-chooser-54fds"
    onChange={[Function]}
    value="fld_8768091">
    <option
        value={null}>
        --
    </option>
    <option
        value="id">
        ID
    </option>
    <option
        value="datestamp">
        Submitted
    </option>
    <option
        value="fld_8768091">
        First Name
    </option>
    <option
        value="fld_9970286">
        Last Name
    </option>
    <option
        value="fld_6009157">
        Email Address
    </option>
    <option
        value="fld_7683514">
        Comments / Questions
    </option>
</select>,
  <div
    className="components-base-control caldera-before-entryValue-edit">
    <div
        className="components-base-control__field">
        <label
            className="components-base-control__label"
            htmlFor="inspector-text-control-4">
            Text Before Value
        </label>
        <input
            aria-describedby={undefined}
            className="components-text-control__input"
            id="caldera-before-entryValue-edit-54fds"
            onChange={[Function]}
            type="text"
            value="Before" />
    </div>
</div>,
  <div
    className="components-base-control caldera-after-entryValue-edit">
    <div
        className="components-base-control__field">
        <label
            className="components-base-control__label"
            htmlFor="inspector-text-control-5">
            Text After Value
        </label>
        <input
            aria-describedby={undefined}
            className="components-text-control__input"
            id="caldera-after-entryValue-edit-54fds"
            onChange={[Function]}
            type="text"
            value="After" />
    </div>
</div>,
]
`;

exports[`Controls component Match snapshot with form and entry selected only 1`] = `
Array [
  <div>
    <label
        className=""
        htmlFor="caldera-forms-form-chooser-54fds">
        Choose Form
    </label>
    <select
        className="caldera-forms-form-chooser"
        id="caldera-forms-form-chooser-54fds"
        onChange={[Function]}
        value="CF5bde22b646ed0">
        <option>
             -- 
        </option>
        <option
            value="CF5bde22a843265">
            Not Contact Form
        </option>
        <option
            value="CF5bde22b646ed0">
            Contact Form
        </option>
    </select>
</div>,
  <label
    htmlFor="caldera-forms-entry-chooser-54fds">
    Choose Entry
</label>,
  <select
    className="caldera-forms-entry-chooser"
    id="caldera-forms-entry-chooser-54fds"
    onChange={[Function]}
    value="1">
    <option
        value={null}>
        --
    </option>
    <option
        value="1">
        1
    </option>
    <option
        value="2">
        2
    </option>
</select>,
  <label
    className=""
    htmlFor="caldera-forms-entry-field-chooser-54fds">
    Choose Field
</label>,
  <select
    className="caldera-forms-entry-field-chooser"
    id="caldera-forms-entry-field-chooser-54fds"
    onChange={[Function]}
    value="">
    <option
        value={null}>
        --
    </option>
    <option
        value="id">
        ID
    </option>
    <option
        value="datestamp">
        Submitted
    </option>
    <option
        value="fld_8768091">
        First Name
    </option>
    <option
        value="fld_9970286">
        Last Name
    </option>
    <option
        value="fld_6009157">
        Email Address
    </option>
    <option
        value="fld_7683514">
        Comments / Questions
    </option>
</select>,
  <div
    className="components-base-control caldera-before-entryValue-edit">
    <div
        className="components-base-control__field">
        <label
            className="components-base-control__label"
            htmlFor="inspector-text-control-2">
            Text Before Value
        </label>
        <input
            aria-describedby={undefined}
            className="components-text-control__input"
            id="caldera-before-entryValue-edit-54fds"
            onChange={[Function]}
            type="text"
            value="" />
    </div>
</div>,
  <div
    className="components-base-control caldera-after-entryValue-edit">
    <div
        className="components-base-control__field">
        <label
            className="components-base-control__label"
            htmlFor="inspector-text-control-3">
            Text After Value
        </label>
        <input
            aria-describedby={undefined}
            className="components-text-control__input"
            id="caldera-after-entryValue-edit-54fds"
            onChange={[Function]}
            type="text"
            value="" />
    </div>
</div>,
]
`;

exports[`Controls component Match snapshot with form selected only 1`] = `
Array [
  <div>
    <label
        className=""
        htmlFor="caldera-forms-form-chooser-54fds">
        Choose Form
    </label>
    <select
        className="caldera-forms-form-chooser"
        id="caldera-forms-form-chooser-54fds"
        onChange={[Function]}
        value="CF5bde22b646ed0">
        <option>
             -- 
        </option>
        <option
            value="CF5bde22a843265">
            Not Contact Form
        </option>
        <option
            value="CF5bde22b646ed0">
            Contact Form
        </option>
    </select>
</div>,
  <label
    htmlFor="caldera-forms-entry-chooser-54fds">
    Choose Entry
</label>,
  <select
    className="caldera-forms-entry-chooser"
    id="caldera-forms-entry-chooser-54fds"
    onChange={[Function]}
    value="">
    <option
        value={null}>
        --
    </option>
</select>,
]
`;

exports[`Controls component Match snapshot with just forms prop set 1`] = `
<div>
  <label
    className=""
    htmlFor="caldera-forms-form-chooser-54fds">
    Choose Form
  </label>
  <select
    className="caldera-forms-form-chooser"
    id="caldera-forms-form-chooser-54fds"
    onChange={[Function]}
    value="">
    <option>
       -- 
    </option>
    <option
      value="CF5bde22a843265">
      Not Contact Form
    </option>
    <option
      value="CF5bde22b646ed0">
      Contact Form
    </option>
  </select>
</div>
`;

exports[`Inline component Match snapshot with all props set 1`] = `
Array [
  <span>
    <label
        className="sr-only screen-reader-text"
        htmlFor="caldera-before-entryValue-edit-54fds">
        Text Before Value
    </label>
    <input
        onChange={[Function]}
        placeholder="Text to show before value"
        type="text"
        value="Before" />
</span>,
  <span>
    <label
        className="sr-only screen-reader-text"
        htmlFor="caldera-forms-entry-field-chooser-54fds">
        Choose Field
    </label>
    <select
        className="caldera-forms-entry-field-chooser"
        id="caldera-forms-entry-field-chooser-54fds"
        onChange={[Function]}
        value="fld_8768091">
        <option
            value={null}>
            --
        </option>
        <option
            value="id">
            ID
        </option>
        <option
            value="datestamp">
            Submitted
        </option>
        <option
            value="fld_8768091">
            First Name
        </option>
        <option
            value="fld_9970286">
            Last Name
        </option>
        <option
            value="fld_6009157">
            Email Address
        </option>
        <option
            value="fld_7683514">
            Comments / Questions
        </option>
    </select>
</span>,
  <span>
    <label
        className="sr-only screen-reader-text"
        htmlFor="caldera-after-entryValue-edit-54fds">
        Text After Value
    </label>
    <input
        id="caldera-after-entryValue-edit-54fds"
        onChange={[Function]}
        placeholder="Text to show after value"
        type="text"
        value="After" />
</span>,
]
`;

exports[`Inline component Match snapshot with form and entry selected only 1`] = `
Array [
  <label
    className=""
    htmlFor="caldera-forms-entry-field-chooser-54fds">
    Choose Field
</label>,
  <select
    className="caldera-forms-entry-field-chooser"
    id="caldera-forms-entry-field-chooser-54fds"
    onChange={[Function]}
    value="">
    <option
        value={null}>
        --
    </option>
    <option
        value="id">
        ID
    </option>
    <option
        value="datestamp">
        Submitted
    </option>
    <option
        value="fld_8768091">
        First Name
    </option>
    <option
        value="fld_9970286">
        Last Name
    </option>
    <option
        value="fld_6009157">
        Email Address
    </option>
    <option
        value="fld_7683514">
        Comments / Questions
    </option>
</select>,
]
`;

exports[`Inline component Match snapshot with form selected only 1`] = `
Array [
  <label
    htmlFor="caldera-forms-entry-chooser-54fds">
    Choose Entry
</label>,
  <select
    className="caldera-forms-entry-chooser"
    id="caldera-forms-entry-chooser-54fds"
    onChange={[Function]}
    value="">
    <option
        value={null}>
        --
    </option>
</select>,
]
`;

exports[`Inline component Match snapshot with just forms prop set 1`] = `
<div>
  <label
    className=""
    htmlFor="caldera-forms-form-chooser-54fds">
    Choose Form
  </label>
  <select
    className="caldera-forms-form-chooser"
    id="caldera-forms-form-chooser-54fds"
    onChange={[Function]}
    value="">
    <option>
       -- 
    </option>
    <option
      value="CF5bde22a843265">
      Not Contact Form
    </option>
    <option
      value="CF5bde22b646ed0">
      Contact Form
    </option>
  </select>
</div>
`;

exports[`Inline component Match snapshot with render prop for ChooseEntryField passed 1`] = `
Array [
  <span>
    <label
        className="sr-only screen-reader-text"
        htmlFor="caldera-before-entryValue-edit-54fds">
        Text Before Value
    </label>
    <input
        onChange={[Function]}
        placeholder="Text to show before value"
        type="text"
        value="Before" />
</span>,
  <span>
    <div>
        Hi Roy
    </div>
</span>,
  <span>
    <label
        className="sr-only screen-reader-text"
        htmlFor="caldera-after-entryValue-edit-54fds">
        Text After Value
    </label>
    <input
        id="caldera-after-entryValue-edit-54fds"
        onChange={[Function]}
        placeholder="Text to show after value"
        type="text"
        value="After" />
</span>,
]
`;
